For the latest news, visit the SparForte web site.

Objective:

CHANGES SINCE 2.4

1. New: doubly_linked_lists.parcel.

2. Fix: fixed "positive value is less than zero" error for a zero.

3. New: renaming a generic type.

4. Fix: missing filename at end-of-line for >, 2>, < no longer produce an
exception.

5. Change: forgetting a "when" in a case statement with strings, which looks
like a shell command, is now an error, detected by the presence of the big arrow
(=>).

6. Fix: out mode formal parameters that are not written to will have a
"declared but not written to" error.

7. Fix: . and .. directories ignored on file completions ending with a /.

8. New: strings.to_hexadecimal_digits

9. Fix: added policy and configuration to built-in help.
