@@ -64,7 +64,8 @@ and character values. (The character positions are numbered from 1.)</p>
   <a href="#strings.overwrite">r := overwrite( s, p, n )</a>      <a href="#strings.replace">replace( s, f, t [, d] )</a>      <a href="#strings.replace_slice">r := replace_slice( s, l, h, b )</a>
   <a href="#strings.set_unbounded_string">set_unbounded_string( u, s )</a>   <a href="#strings.slice">r := slice( s, l, h )</a>         <a href="#strings.split">split( s, l, r , p )</a>
   <a href="#strings.tail">r := tail( s, c [, p] )</a>        <a href="#strings.to_base64">r := strings.to_base64( s )</a>   <a href="#strings.to_basic">r := to_basic( s )</a>
-  <a href="#strings.to_escaped">r := to_escaped( s )</a>           <a href="#strings.to_json">r := to_json( s )</a>             <a href="#strings.to_lower">r := to_lower( s )</a>
+  <a href="#strings.to_escaped">r := to_escaped( s )</a>           <a href="#strings.to_hexadecimal_digits">s := to_hexadecimal_digits(n)</a> <a href="#strings.to_json">r := to_json( s )</a>
+  <a href="#strings.to_lower">r := to_lower( s )</a>
   <a href="#strings.to_proper">r := to_proper( s )</a>            <a href="#strings.to_string">r := to_string( s )</a>           <a href="#strings.to_upper">r := to_upper( s )</a>
   <a href="#strings.to_unbounded_string">u := to_unbounded_string( s )</a>  <a href="#strings.trim">r := trim( s [, e] )</a>          <a href="#strings.unbounded_slice">r := unbounded_slice(s, l, h)</a>
   <a href="#strings.val">c := val( n )</a>                  <a href="#strings.perl_match">c := perl_match( e, s )</a> 
@@ -217,6 +218,9 @@ for compatibility with Ada.</p>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
 </tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
+</tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#strings.field">strings.field</a><br><a href="#strings.index">strings.index</a><br><a href="#strings.lookup">strings.lookup</a></p></td>
 </tr><tr>
@@ -277,6 +281,9 @@ for compatibility with Ada.</p>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
+</tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#strings.csv_field">strings.csv_field</a><br><a href="#strings.replace_slice">strings.replace_slice</a></p></td>
@@ -520,6 +527,9 @@ for compatibility with Ada.</p>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
+</tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#strings.index">strings.index</a><br><a href="#strings.match">strings.match</a></p></td>
@@ -1293,6 +1303,9 @@ padded using character p</p></td>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
 </tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
+</tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p>-</p></td>
 </tr><tr>
@@ -1343,6 +1356,9 @@ padded using character p</p></td>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
+</tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p>-</p></td>
@@ -2022,8 +2038,11 @@ This has more features than strings.match.</p>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
 </tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
+</tr><tr>
 <td><p class="pkg_label">See Also</p></td>
-<td><p>-</p></td>
+<td><p><a href="pkg_doubly.html#doubly_linked_lists.parcel">doubly_linked_lists.parcel</a></p></td>
 </tr><tr>
 <td><p class="pkg_label">Compare With</p></td>
 <td><p>PHP: wordwrap</p></td>
@@ -2130,6 +2149,9 @@ This has more features than strings.match.</p>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
 </tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
+</tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#strings.to_string">strings.to_string</a></p></td>
 </tr><tr>
@@ -2221,11 +2243,64 @@ This has more features than strings.match.</p>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
 </tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
+</tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p>-</p></td>
 </tr><tr>
 <td><p class="pkg_label">Compare With</p></td>
 <td><p>-</p></td>
+</tr>
+</table>
+
+<a name="strings.to_hexadecimal_digits"></a><h3>s := strings.to_hexadecimal_digits( n )</h3>
+<table cellspacing="0" cellpadding="0" width="98%" summary="package call">
+<tr>
+<td width="15%">&nbsp;</td>
+<td><p>Return a natural number as upper-case hexadecimal digits.</p></td>
+</tr><tr>
+<td><p class="pkg_label">Example</p></td>
+<td><span class="code">s := strings.to_hexadecimal_digits( 123 ); -- returns "7B"</span></td>
+</tr><tr>
+<td><p class="pkg_label">Parameters</p></td>
+<td><table CELLSPACING=0 CELLPADDING=0 WIDTH="100%" border="0" >
+<tr>
+<td><span class="pkg_param">Param</span></td>
+<td><span class="pkg_param">Mode</span></td>
+<td><span class="pkg_param">Type</span></td>
+<td><span class="pkg_param">Default</span></td>
+<td><span class="pkg_param">Description</span></td>
+</tr><tr>
+<td><span>n</span></td>
+<td><span>in</span></td>
+<td><span>natural</span></td>
+<td><span>required</span></td>
+<td><span>the number to convert</span></td>
+</tr>
+<tr>
+<td><span>s</span></td>
+<td><span>return value</span></td>
+<td><span>universal_string</span></td>
+<td><span>required</span></td>
+<td><span>the hexadecimal string</span></td>
+</tr>
+</table></td>
+</tr><tr>
+<td><p class="pkg_label">Exceptions</p></td>
+<td><p>-</p></td>
+</tr><tr>
+<td><p class="pkg_label">Introduced</p></td>
+<td><p>to_hexadecimal_digits introduced with SparForte 2.4.1</p></td>
+</tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
+</tr><tr>
+<td><p class="pkg_label">See Also</p></td>
+<td><p>-</p></td>
+</tr><tr>
+<td><p class="pkg_label">Compare With</p></td>
+<td><p>PHP: dechex<br>Python: hex</p></td>
 </tr>
 </table>
 
@@ -2352,6 +2427,9 @@ This has more features than strings.match.</p>
 </tr><tr>
 <td><p class="pkg_label">Exceptions</p></td>
 <td><p>-</p></td>
+</tr><tr>
+<td><p class="pkg_label">Restrictions</p></td>
+<td><p>Not allowed with pragma ada_95</p>
 </tr><tr>
 <td><p class="pkg_label">See Also</p></td>
 <td><p><a href="#strings.to_string">strings.to_string</a></p></td>
