@@ -1,0 +1,5 @@
+pragma ada_95;
+
+s : string := "1,2,3";
+strings.csv_replace( s, 2, "4" );
+
