@@ -1,0 +1,4 @@
+pragma ada_95;
+
+put_line( strings.field( "1 2 3", 2 ) ); -- not allowed with ada_95
+
