@@ -1,0 +1,4 @@
+pragma ada_95;
+
+put_line( strings.is_slashed_date( "21/11/11" ) ); -- not allowed with ada_95
+
