@@ -1,0 +1,4 @@
+pragma ada_95;
+
+put_line( strings.is_typo_of( "abc", "def" ) ); -- not allowed with ada_95
+
