@@ -1,0 +1,4 @@
+pragma ada_95;
+
+put_line( strings.mktemp( ""tempXXXXXX"" ) ); -- not allowed with ada_95
+
