@@ -1,0 +1,7 @@
+pragma ada_95;
+
+lstr : string;
+rstr : string;
+
+strings.split( "hello there", lstr, rstr, 9  ); -- not allowed with ada_95
+
