@@ -1,0 +1,4 @@
+pragma ada_95;
+
+put_line( strings.to_base64( "abc" ) ); -- not allowed with ada_95
+
