@@ -1,0 +1,4 @@
+pragma ada_95;
+
+put_line( strings.to_hexadecimal_digits( 121 ) ); -- not allowed with ada_95
+
