@@ -46,7 +46,7 @@ package world is
 -- Global Variables / Flags
 ------------------------------------------------------------------------------
 
-version   : constant string  := "2.5";
+version   : constant string  := "2.4.1";
 released  : constant boolean := $configreleased;
 buildDate : constant string  := $configbuilddate;
 copyright : constant string  :=  " Copyright (c)2001-2021 Free Software Foundation";
